--- a/index.html
+++ b/index.html
@@ -205,35 +205,35 @@
           </p>
           <h4>Why Software Engineering?</h4>
           <p>
-            Since the pandemic, WFH has meant sharing a workspace with a
-            software engineer, and this has given me invaluable insight into the
-            profession and its processes - stand-ups, sprints, retros etc. As
-            someone who is
+            My interest was first piqued when, during the pandemic, WFH meant
+            sharing a workspace with a software engineer. I gained invaluable
+            insight into the profession and its processes - stand-ups, sprints,
+            retros etc. As someone who is
             <span>
               motivated by effective collaboration, high performance, and
               continuous learning and improvement</span
-            >, my interest was piqued. However, having thought of myself rather
-            reductively as "more of a humanities person" all my adult life, I
-            didn't believe at the time that a stem career could really be for
-            me.
+            >, this approach to work was very attractive. However, having been
+            on a humanities path since choosing my A Levels
+            <span>before the turn of the century</span> 🙀, it didn't initially
+            occur to me that I might like a STEM career, despite having had an
+            aptitude for and interest in these subjects in my youth.
           </p>
           <h4>My Journey So Far</h4>
           <p>
-            A couple of years later and to meet the requirements of a job
-            vacancy which asked for some experience of HTML and JavaScript, I
-            turned to <span>Codecademy</span> and found to my surprise that I
-            very much enjoyed it. Around the same time, some personality testing
-            via my university's careers service also suggested the field would
-            be a very good fit for me. All signs now seemed to point to software
-            engineering, and so I took the plunge and enrolled on
+            A couple of years later, to meet the requirements of a job vacancy
+            which asked for some experience of HTML and JavaScript, I turned to
+            <span>Codecademy</span> and found I very much enjoyed it. Around the
+            same time, some personality testing via my university's careers
+            service also suggested the field would be a very good fit for me.
+            All signs now seemed to point to software engineering, and so I took
+            the plunge and enrolled on
             <span>General Assembly's immersive bootcamp</span>. It was fantastic
             to be back in a learning environment and to be really challenged by
-            something totally new, and I am looking forward to starting out in
-            the field, knowing I will be expected to continue to learn and
-            improve throughout my career. I hope to secure a position working
-            with super fun people who are super serious about what they do,
-            where I will be supported and encouraged to understand my new craft
-            inside out.
+            something totally new, and I am looking forward to starting out,
+            knowing I will be expected to continue to learn and improve
+            throughout my career. I hope to secure a position working with fun
+            people who are serious about what they do, where I will be supported
+            and encouraged to understand my new craft inside out.
           </p>
           <h4>Why Me?</h4>
           <p>
