More copy updates, and adds C to experience

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="about-copy">
           <h4>Previously...</h4>
           <p>
-            My name is Catherine and I am a
+            I am a
             <span>Junior Software Engineer</span> who has accrued diverse
             experience in a variety of other roles, including working for the
             picture desk of a national newspaper, in marketing for a chain of
@@ -206,17 +206,17 @@
           <h4>Why Software Engineering?</h4>
           <p>
             My interest was first piqued when, during the pandemic, WFH meant
-            sharing a workspace with a software engineer. I gained invaluable
-            insight into the profession and its processes - stand-ups, sprints,
-            retros etc. As someone who is
+            sharing a workspace with a software engineer. This gave me an
+            invaluable insight into the profession and its processes -
+            stand-ups, sprints, retros etc. As someone who is
             <span>
               motivated by effective collaboration, high performance, and
               continuous learning and improvement</span
-            >, this approach to work was very attractive. However, having been
-            on a humanities path since choosing my A Levels
-            <span>before the turn of the century</span> 🙀, it didn't initially
-            occur to me that I might like a STEM career, despite having had an
-            aptitude for and interest in these subjects in my youth.
+            >, this approach to work was very attractive. However, having
+            enjoyed a humanities path ever since choosing my A Levels before the
+            turn of the <i>century</i> 🙀, it didn't initially occur to me that
+            I might equally enjoy a STEM career, despite having also had an
+            aptitude for and interest in these subjects at school.
           </p>
           <h4>My Journey So Far</h4>
           <p>
@@ -229,11 +229,11 @@
             the plunge and enrolled on
             <span>General Assembly's immersive bootcamp</span>. It was fantastic
             to be back in a learning environment and to be really challenged by
-            something totally new, and I am looking forward to starting out,
-            knowing I will be expected to continue to learn and improve
-            throughout my career. I hope to secure a position working with fun
-            people who are serious about what they do, where I will be supported
-            and encouraged to understand my new craft inside out.
+            something totally new. I am looking forward to starting out, and to
+            continuing to learn and improve throughout my career. I hope to
+            secure a position working with fun people who are serious about what
+            they do, where I will be supported and encouraged to understand my
+            new craft inside out.
           </p>
           <h4>Why Me?</h4>
           <p>
@@ -245,10 +245,13 @@
           </p>
           <h4>My Programming Interests</h4>
           <p class="resources">
-            I am particularly interested in <span>backend development</span>,
-            and I subscribe to the <cite>Talk Python to Me</cite> podcast. I
-            also read the <cite>TLDR</cite> newsletter, and enjoy the
-            <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts. (I
+            With my bootcamp successfully completed, I am embracing the
+            opportunity to consolidate what I've learned so far and to
+            broaden/deepen my understanding of the discipline. I am currently
+            working through Harvard's introduction to computer science,
+            <cite>CS50x</cite>. Other resources I enjoy include Eric Matthes'
+            <cite>Python Crash Course</cite>, Codecademy, and the TLDR
+            newsletter. I also subscribe to a number of podcasts, and I
             especially liked
             <a
               href="https://corecursive.com/hedy-with-felienne-hermans/"
@@ -256,12 +259,7 @@
               rel="noreferrer"
               >this episode</a
             >
-            of the latter.) With the bootcamp successfully completed, I am
-            embracing the opportunity to consolidate what I've learned so far
-            and to broaden/deepen my understanding of the discipline: at the
-            moment, I am working through Eric Matthes'
-            <cite>Python Crash Course</cite> as well as Harvard's introduction
-            to Computer Science, <cite>CS50x</cite>.
+            of <cite>CoRecursive</cite>.
           </p>
           <h4>(Some Of) My Other Interests</h4>
           <p>
@@ -368,6 +366,10 @@
               VS Code
             </li>
             <li>
+              <i class="devicon-c-plain"></i>
+              C
+            </li>
+            <li>
               <i class="devicon-typescript-plain"></i>
               TypeScript
             </li>
@@ -395,7 +397,8 @@
           <h2 class="large-text">Projects</h2>
           <p>
             I completed General Assembly's Software Engineering Bootcamp between
-            January and April 2024. As part of the course I built four projects:
+            January and April 2024. As part of the course, I built four
+            projects:
           </p>
         </div>
         <article class="project">
