More copy changes

--- a/index.html
+++ b/index.html
@@ -212,21 +212,20 @@
             <span>
               motivated by effective collaboration, high performance, and
               continuous learning and improvement</span
-            >, this approach to work was very attractive. However, having
-            enjoyed a humanities path ever since choosing my A Levels before the
-            turn of the <i>century</i> 🙀, it didn't initially occur to me that
-            I might equally enjoy a STEM career, despite having also had an
-            aptitude for and interest in these subjects at school.
+            >, this approach to work was very attractive.
           </p>
           <h4>My Journey So Far</h4>
           <p>
-            A couple of years later, to meet the requirements of a job vacancy
-            which asked for some experience of HTML and JavaScript, I turned to
-            <span>Codecademy</span> and found I very much enjoyed it. Around the
-            same time, some personality testing via my university's careers
-            service also suggested the field would be a very good fit for me.
-            All signs now seemed to point to software engineering, and so I took
-            the plunge and enrolled on
+            However, having enjoyed a humanities path ever since choosing A
+            Levels, it didn't initially occur to me that I might equally enjoy a
+            STEM career—despite having also had an aptitude for and interest in
+            these subjects at school. And so a couple of years passed before, to
+            meet the requirements of a job vacancy asking for experience of HTML
+            and JavaScript, I turned to <span>Codecademy</span> and found I very
+            much enjoyed it. Around the same time, some personality testing via
+            my university's careers service also suggested the field would be a
+            very good fit for me. All signs now seemed to point to software
+            engineering, and so I took the plunge and enrolled on
             <span>General Assembly's immersive bootcamp</span>. It was fantastic
             to be back in a learning environment and to be really challenged by
             something totally new. I am looking forward to starting out, and to
