--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
           <h4>(Some Of) My Other Interests</h4>
           <p>
             One of my main interests is languages, and having studied French and
-            Spanish as my degree, I am also teaching myself Italian. I work
-            daily to maintain and improve my languages using a variety of
-            resources from Duolingo to podcasts, from YouTube to fiction, and
-            from Netflix to video calls with learners of English. I am
-            <span>always happy and motivated to learn independently</span>. As a
-            Duolingo fanatic, I am currently dabbling with Ukrainian, Polish and
-            Welsh, too! I also love to read, and am a member of my university's
-            alumni book group.
+            Spanish as my degree, I have also been teaching myself Italian for a
+            number of years. I work daily to maintain and improve my languages
+            using a wide variety of resources—everything from Duolingo to
+            podcasts, YouTube, fiction, Netflix, and conversations with learners
+            of English. As a Duolingo fanatic, I am currently using it to learn
+            Ukrainian, Polish and Welsh, too! I am
+            <span>always happy and motivated to learn independently</span>. I
+            also love to read, and am a member of my university's alumni book
+            group.
           </p>
         </div>
       </section>
