--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
             opportunity to consolidate what I've learned so far and to
             broaden/deepen my understanding of the discipline. I am currently
             working through Harvard's introduction to computer science,
-            <cite>CS50x</cite>. Other resources I enjoy include Eric Matthes'
+            <cite>CS50x</cite>. Other resources I enjoy include Marijn
+            Haverbeke's <cite>Eloquent JavaScript</cite>, Eric Matthes'
             <cite>Python Crash Course</cite>, Codecademy, and the TLDR
             newsletter. I also subscribe to a number of podcasts, and I
             especially liked
