Updates copy formatting

--- a/index.html
+++ b/index.html
@@ -248,11 +248,12 @@
             opportunity to consolidate what I've learned so far and to
             broaden/deepen my understanding of the discipline. I am currently
             working through Harvard's introduction to computer science,
-            <cite>CS50x</cite>. Other resources I enjoy include Marijn
-            Haverbeke's <cite>Eloquent JavaScript</cite>, Eric Matthes'
-            <cite>Python Crash Course</cite>, Codecademy, and the TLDR
-            newsletter. I also subscribe to a number of podcasts, and I
-            especially liked
+            <span><cite>CS50x</cite></span
+            >. Other resources I enjoy include Marijn Haverbeke's
+            <span><cite>Eloquent JavaScript</cite></span
+            >, Eric Matthes' <span><cite>Python Crash Course</cite></span
+            >, Codecademy, and the TLDR newsletter. I also subscribe to a number
+            of podcasts, and I especially liked
             <a
               href="https://corecursive.com/hedy-with-felienne-hermans/"
               target="_blank"
